@@ -1,13 +1,13 @@
-package com.example.ludogoriesoft.village.services;
+package com.example.ludogorieSoft.village.services;
 
-import com.example.ludogoriesoft.village.dtos.VillagePopulationAssertionDTO;
-import com.example.ludogoriesoft.village.exeptions.ApiRequestException;
-import com.example.ludogoriesoft.village.model.PopulatedAssertion;
-import com.example.ludogoriesoft.village.model.Village;
-import com.example.ludogoriesoft.village.model.VillagePopulationAssertion;
-import com.example.ludogoriesoft.village.repositories.PopulatedAssertionRepository;
-import com.example.ludogoriesoft.village.repositories.VillagePopulationAssertionRepository;
-import com.example.ludogoriesoft.village.repositories.VillageRepository;
+import com.example.ludogorieSoft.village.dtos.VillagePopulationAssertionDTO;
+import com.example.ludogorieSoft.village.exeptions.ApiRequestException;
+import com.example.ludogorieSoft.village.model.PopulatedAssertion;
+import com.example.ludogorieSoft.village.model.Village;
+import com.example.ludogorieSoft.village.model.VillagePopulationAssertion;
+import com.example.ludogorieSoft.village.repositories.PopulatedAssertionRepository;
+import com.example.ludogorieSoft.village.repositories.VillagePopulationAssertionRepository;
+import com.example.ludogorieSoft.village.repositories.VillageRepository;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.dao.EmptyResultDataAccessException;
@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -92,7 +91,7 @@ public class VillagePopulationAssertionService {
         if (id != null) {
             villagePopulationAssertionsList = villagePopulationAssertionsList.stream()
                     .filter(assertion -> id.equals(assertion.getVillage().getId()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return villagePopulationAssertionsList.stream()
